Update resume link to new file name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#softskills">Soft Skills</a>
         <a href="#education">Education</a>
         <a href="#contact">Contact</a>
-        <a class="btn" href="assets/resume.pdf" download>Resume</a>
+        <a class="btn" href="assets/ARYAN RESUME.pdf" download>Resume</a>
       </nav>
 
       <button class="menu-toggle" id="menuToggle">☰</button>
